--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "test": "grunt mochaTest"
   },
   "dependencies": {
-    "assemble-handlebars": "~0.2.0",
+    "assemble-handlebars": "https://github.com/eins78/assemble-handlebars/tarball/master",
     "assemble-yaml": "~0.1.5",
     "inflection": "~1.2.6",
     "lodash": "~1.3.1",
